# DevOpsML

tp1_git_intro/: README.md  main.py
tp2/: .coverage  README.md  conftest.py  pyproject.toml
tp2/src/: Ex1.py  Ex2.py  Ex3.py  Ex4.py  web_app.py
tp2/tests/functional/: test_functional.py
tp2/tests/integration/: test_integration.py  test_placeholder.py
tp2/tests/unit/: test_Ex1.py  test_Ex2.py
tp3/: Jenkinsfile
tp4/test-sonarqube/: .coverage  coverage.xml  main.py  pyproject.toml
tp4/test-sonarqube/.sonar/: report-task.txt
tp4/test-sonarqube/src/: calculator.py
tp4/test-sonarqube/tests/: test_calculator.py
tp5/: .dockerignore  (+5 more)
tp7/tp-dvc-mlflow/: dvc.yaml  params.yaml  pyproject.toml
tp7/tp-dvc-mlflow/data/splits/: test.csv  val.csv
tp7/tp-dvc-mlflow/mlruns/372634213590109948/: meta.yaml
tp7/tp-dvc-mlflow/mlruns/372634213590109948/e814bc7b61304d9591e6fcd84ad13e54/: meta.yaml
tp7/tp-dvc-mlflow/mlruns/372634213590109948/e814bc7b61304d9591e6fcd84ad13e54/metrics/: test_accuracy
tp7/tp-dvc-mlflow/mlruns/372634213590109948/e814bc7b61304d9591e6fcd84ad13e54/outputs/m-92759052e1b14b20b24eafb557ad4f20/: meta.yaml
tp7/tp-dvc-mlflow/mlruns/372634213590109948/e814bc7b61304d9591e6fcd84ad13e54/tags/: mlflow.runName  mlflow.source.name
tp7/tp-dvc-mlflow/mlruns/372634213590109948/models/m-92759052e1b14b20b24eafb557ad4f20/: meta.yaml
tp7/tp-dvc-mlflow/mlruns/372634213590109948/models/m-92759052e1b14b20b24eafb557ad4f20/artifacts/: MLmodel  conda.yaml  model.pkl  requirements.txt
tp7/tp-dvc-mlflow/models/: model.joblib
tp7/tp-dvc-mlflow/reports/: metrics.json
tp7/tp-dvc-mlflow/src/data/: download.py  preprocess.py  split.py
tp7/tp-dvc-mlflow/src/train/: train.py
(+11 files in other folders)
