[project]
name = "test"
version = "0.1.0"
description = ""
authors = [
    {name = "Bosaj",email = "oussousselhadji@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pysonar (>=1.2.1.3951,<2.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "coverage (>=7.12.0,<8.0.0)"
]
